--- a/app/index.html
+++ b/app/index.html
@@ -37,11 +37,11 @@
 
                     <div class="collapse navbar-collapse nav-headers" id="js-navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a class="nav-header" href="#/">HOME</a></li>
-                            <li><a class="nav-header" ng-href="#/projects">PROJECTS</a></li>
-                            <li><a class="nav-header" ng-href="#/resume">RESUME</a></li>
-                            <li><a class="nav-header" ng-href="#/about">ABOUT</a></li>
-                            <li><a class="nav-header" ng-href="#/contact">CONTACT</a></li>
+                            <li class="home"><a class="nav-header" href="#/">HOME</a></li>
+                            <li class="projects"><a class="nav-header" ng-href="#/projects">PROJECTS</a></li>
+                            <li class="resume"><a class="nav-header" ng-href="#/resume">RESUME</a></li>
+                            <li class="about"><a class="nav-header" ng-href="#/about">ABOUT</a></li>
+                            <li class="contact"><a class="nav-header" ng-href="#/contact">CONTACT</a></li>
                         </ul>
                     </div>
                 </div>
