added about me page

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
         <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/milestones.css">
         <!-- endbuild -->
     </head>
     <body ng-app="mywebsiteApp">
@@ -98,6 +99,7 @@
             <script src="scripts/controllers/resume.js"></script>
             <script src="scripts/controllers/about.js"></script>
             <script src="scripts/controllers/contact.js"></script>
+            <script src="scripts/directives/milestones.js"></script>
         <!-- endbuild -->
 </body>
 </html>
