updated font-family and sizes of all texts on site

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/milestones.css">
+        <link href='http://fonts.googleapis.com/css?family=Josefin+Sans|Gloria+Hallelujah|Indie+Flower|Yanone+Kaffeesatz|Vollkorn|Play|Dancing+Script|Bangers|Kaushan+Script|Lobster+Two' rel='stylesheet' type='text/css'>
         <!-- endbuild -->
     </head>
     <body ng-app="mywebsiteApp">
@@ -46,7 +47,7 @@
                         </ul>
                     </div>
                 </div>
-                <div id="nav-title1" class="nav-title"><h2><em>Front-end Developer</em></h2></div>
+                <div id="nav-title1" class="nav-title"><h1><em>Front-end Developer</em></h1></div>
                 <div id="nav-title2" class="nav-title"><h2>@ SHUTTERFLY</h2></div>
             </div>
         </div>
