updated home page and milestones component

--- a/app/index.html
+++ b/app/index.html
@@ -63,9 +63,9 @@
                     <ul class="nav navbar-nav navbar-footer">
                         <li><a class="nav-header active" href="#/">HOME</a></li>
                         <li><a class="nav-header" ng-href="#/projects">PROJECTS</a></li>
-                        <li><a class="nav-header" ng-href="#/projects">RESUME</a></li>
+                        <li><a class="nav-header" ng-href="#/resume">RESUME</a></li>
                         <li><a class="nav-header" ng-href="#/about">ABOUT</a></li>
-                        <li><a class="nav-header" ng-href="#/">CONTACT</a></li>
+                        <li><a class="nav-header" ng-href="#/contact">CONTACT</a></li>
                     </ul>
                 </div>
                 <p class="copyright">&#169; 2015 Alouise Quiatchon. All rights reserved.</p>
