added dynamic titles on each page

--- a/app/index.html
+++ b/app/index.html
@@ -47,8 +47,8 @@
                         </ul>
                     </div>
                 </div>
-                <div id="nav-title1" class="nav-title"><h1><em>Front-end Developer</em></h1></div>
-                <div id="nav-title2" class="nav-title"><h2>@ SHUTTERFLY</h2></div>
+                <div id="nav-title1" class="nav-title"><h1><em></em></h1></div>
+                <div id="nav-title2" class="nav-title"><h2></h2></div>
             </div>
         </div>
 
