added images to nav headers for each page

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
 
         <!-- Add your site or application content here -->
         <div class="header">
-            <div class="navbar custom-navbar" role="navigation">
+            <div id="navbar" class="navbar custom-navbar" role="navigation">
                 <div>
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
