added transitions on nav titles

--- a/app/index.html
+++ b/app/index.html
@@ -49,8 +49,10 @@
                         </div>
                     </div>
                 </div>
-                <div id="nav-title1" class="nav-title"><h1><em></em></h1></div>
-                <div id="nav-title2" class="nav-title"><h2></h2></div>
+                <div id="titles">
+                    <div id="nav-title1" class="nav-title"><h1><em></em></h1></div>
+                    <div id="nav-title2" class="nav-title"><h2></h2></div>
+                </div>
             </div>
         </div>
 
@@ -110,12 +112,15 @@
         <script>
             $(window).on('scroll', function () {
                 if ($(this).scrollTop() > 155) {
-                    $('#nav-title1').addClass('sticky-title');
+                    $('#nav-title1').addClass('sticky-title1');
+                    $('#nav-title2').addClass('sticky-title2');
                 } else {
-                    $('#nav-title1').removeClass('sticky-title');
+                    $('#nav-title1').removeClass('sticky-title1');
+                    $('#nav-title2').removeClass('sticky-title2');
                 }
                 if ($(this).scrollTop() > 366) {
                     $('.header-wrapper').addClass('sticky-navbar');
+                    $('#nav-title2').removeClass('sticky-title2');
                 } else {
                     $('.header-wrapper').removeClass('sticky-navbar');
 
