started playing with canvas

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
 
         <!-- Add your site or application content here -->
         <div class="header">
+            <!-- <canvas height="430" style="width:100%"></canvas> -->
             <div id="navbar" class="navbar custom-navbar" role="navigation">
                 <div>
                     <div class="navbar-header">
