--- a/app/index.html
+++ b/app/index.html
@@ -25,8 +25,8 @@
         <!-- Add your site or application content here -->
         <div class="header">            
             <div id="navbar" class="navbar custom-navbar" role="navigation">
-                <img class="home-b" src="/images/ironman-tech2.png" />
-                <canvas height="430" style="width:100%"></canvas>
+                <!-- <img class="home-b" src="/images/ironman-tech2.png" />
+                <canvas height="430" style="width:100%"></canvas> -->
                 <div>
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
@@ -127,7 +127,6 @@
                     $('.header-wrapper').removeClass('sticky-navbar');
 
                 }
-                console.log($(this).scrollTop());
             });
         </script>
 
