--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,9 @@
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
-        <link rel="stylesheet" href="styles/main.css">
-        <link rel="stylesheet" href="styles/milestones.css">        
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="static/styles/main.css">
+        <link rel="stylesheet" href="static/styles/milestones.css">        
         <!-- endbuild -->
         <link href='http://fonts.googleapis.com/css?family=Josefin+Sans|Gloria+Hallelujah|Indie+Flower|Yanone+Kaffeesatz|Vollkorn|Play|Dancing+Script|Bangers|Kaushan+Script|Lobster+Two' rel='stylesheet' type='text/css'>
     </head>
