--- a/app/static/index.html
+++ b/app/static/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/milestones.css">        
         <!-- endbuild -->
-        <link href='http://fonts.googleapis.com/css?family=Josefin+Sans|Gloria+Hallelujah|Indie+Flower|Yanone+Kaffeesatz|Vollkorn|Play|Dancing+Script|Bangers|Kaushan+Script|Lobster+Two' rel='stylesheet' type='text/css'>
+        <link href='styles/fonts.css' rel='stylesheet' type='text/css'>
     </head>
     <body ng-app="mywebsiteApp">
         <!--[if lt IE 7]>
