fixed nav headers css issues; moved duplicate code from controllers to a service; updated resume

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -46,7 +46,7 @@
                                 <li class="projects"><a class="nav-header" ui-sref="projects">PROJECTS</a></li>
                                 <li class="resume"><a class="nav-header" ui-sref="resume">RESUME</a></li>
                                 <li class="about"><a class="nav-header" ui-sref="about">ABOUT</a></li>
-                                <li class="contact"><a class="nav-header" ui-sref="contact">CONTACT</a></li>
+                                <li class="contact"><a class="nav-header anomaly" ui-sref="contact">CONTACT</a></li>
                             </ul>
                         </div>
                     </div>
